tests/some-site/ingress/ingress_nginx/ingress-nginx-admission-create-job.yaml
"apiVersion": "batch/v1"
"kind": "Job"
"metadata":
  "labels":
    "app.kubernetes.io/component": "admission-webhook"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.2.1"
  "name": "ingress-nginx-admission-create"
  "namespace": "ingress-nginx"
"spec":
  "template":
    "metadata":
      "labels":
        "app.kubernetes.io/component": "admission-webhook"
        "app.kubernetes.io/instance": "ingress-nginx"
        "app.kubernetes.io/name": "ingress-nginx"
        "app.kubernetes.io/part-of": "ingress-nginx"
        "app.kubernetes.io/version": "1.2.1"
      "name": "ingress-nginx-admission-create"
    "spec":
      "containers":
      - "args":
        - "create"
        - "--host=ingress-nginx-controller-admission,ingress-nginx-controller-admission.$(POD_NAMESPACE).svc"
        - "--namespace=$(POD_NAMESPACE)"
        - "--secret-name=ingress-nginx-admission"
        "env":
        - "name": "POD_NAMESPACE"
          "valueFrom":
            "fieldRef":
              "fieldPath": "metadata.namespace"
        "image": "k8s.gcr.io/ingress-nginx/kube-webhook-certgen:v1.1.1@sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660"
        "imagePullPolicy": "IfNotPresent"
        "name": "create"
        "securityContext":
          "allowPrivilegeEscalation": false
      "nodeSelector":
        "kubernetes.io/os": "linux"
      "restartPolicy": "OnFailure"
      "securityContext":
        "fsGroup": 2000
        "runAsNonRoot": true
        "runAsUser": 2000
      "serviceAccountName": "ingress-nginx-admission"
