tests/some-site/ingress/ingress_nginx/ingress-nginx-admission-role.yaml
"apiVersion": "rbac.authorization.k8s.io/v1"
"kind": "Role"
"metadata":
  "labels":
    "app.kubernetes.io/component": "admission-webhook"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.2.1"
  "name": "ingress-nginx-admission"
  "namespace": "ingress-nginx"
"rules":
- "apiGroups":
  - ""
  "resources":
  - "secrets"
  "verbs":
  - "get"
  - "create"
