tests/some-site/ingress/ingress_nginx/ingress-nginx-admission-serviceaccount.yaml
"apiVersion": "v1"
"kind": "ServiceAccount"
"metadata":
  "labels":
    "app.kubernetes.io/component": "admission-webhook"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.8.0"
  "name": "ingress-nginx-admission"
  "namespace": "ingress-nginx"
