tests/some-site/ingress/ingress_nginx/ingress-nginx-clusterrole.yaml
"apiVersion": "rbac.authorization.k8s.io/v1"
"kind": "ClusterRole"
"metadata":
  "labels":
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.2.1"
  "name": "ingress-nginx"
"rules":
- "apiGroups":
  - ""
  "resources":
  - "configmaps"
  - "endpoints"
  - "nodes"
  - "pods"
  - "secrets"
  - "namespaces"
  "verbs":
  - "list"
  - "watch"
- "apiGroups":
  - ""
  "resources":
  - "nodes"
  "verbs":
  - "get"
- "apiGroups":
  - ""
  "resources":
  - "services"
  "verbs":
  - "get"
  - "list"
  - "watch"
- "apiGroups":
  - "networking.k8s.io"
  "resources":
  - "ingresses"
  "verbs":
  - "get"
  - "list"
  - "watch"
- "apiGroups":
  - ""
  "resources":
  - "events"
  "verbs":
  - "create"
  - "patch"
- "apiGroups":
  - "networking.k8s.io"
  "resources":
  - "ingresses/status"
  "verbs":
  - "update"
- "apiGroups":
  - "networking.k8s.io"
  "resources":
  - "ingressclasses"
  "verbs":
  - "get"
  - "list"
  - "watch"
