tests/some-site/ingress/ingress_nginx/ingress-nginx-clusterrolebinding.yaml
"apiVersion": "rbac.authorization.k8s.io/v1"
"kind": "ClusterRoleBinding"
"metadata":
  "labels":
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.2.1"
  "name": "ingress-nginx"
"roleRef":
  "apiGroup": "rbac.authorization.k8s.io"
  "kind": "ClusterRole"
  "name": "ingress-nginx"
"subjects":
- "kind": "ServiceAccount"
  "name": "ingress-nginx"
  "namespace": "ingress-nginx"
