tests/some-site/ingress/ingress_nginx/ingress-nginx-controller-admission-service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "labels":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.2.1"
  "name": "ingress-nginx-controller-admission"
  "namespace": "ingress-nginx"
"spec":
  "ports":
  - "appProtocol": "https"
    "name": "https-webhook"
    "port": 443
    "targetPort": "webhook"
  "selector":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
  "type": "ClusterIP"
