tests/some-site/ingress/ingress_nginx/ingress-nginx-controller-configmap.yaml
"apiVersion": "v1"
"data":
  "allow-snippet-annotations": "true"
"kind": "ConfigMap"
"metadata":
  "labels":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.8.0"
  "name": "ingress-nginx-controller"
  "namespace": "ingress-nginx"
