tests/some-site/ingress/ingress_nginx/ingress-nginx-role.yaml
"apiVersion": "rbac.authorization.k8s.io/v1"
"kind": "Role"
"metadata":
  "labels":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.8.0"
  "name": "ingress-nginx"
  "namespace": "ingress-nginx"
"rules":
- "apiGroups":
  - ""
  "resources":
  - "namespaces"
  "verbs":
  - "get"
- "apiGroups":
  - ""
  "resources":
  - "configmaps"
  - "pods"
  - "secrets"
  - "endpoints"
  "verbs":
  - "get"
  - "list"
  - "watch"
- "apiGroups":
  - ""
  "resources":
  - "services"
  "verbs":
  - "get"
  - "list"
  - "watch"
- "apiGroups":
  - "networking.k8s.io"
  "resources":
  - "ingresses"
  "verbs":
  - "get"
  - "list"
  - "watch"
- "apiGroups":
  - "networking.k8s.io"
  "resources":
  - "ingresses/status"
  "verbs":
  - "update"
- "apiGroups":
  - "networking.k8s.io"
  "resources":
  - "ingressclasses"
  "verbs":
  - "get"
  - "list"
  - "watch"
- "apiGroups":
  - "coordination.k8s.io"
  "resourceNames":
  - "ingress-nginx-leader"
  "resources":
  - "leases"
  "verbs":
  - "get"
  - "update"
- "apiGroups":
  - "coordination.k8s.io"
  "resources":
  - "leases"
  "verbs":
  - "create"
- "apiGroups":
  - ""
  "resources":
  - "events"
  "verbs":
  - "create"
  - "patch"
- "apiGroups":
  - "discovery.k8s.io"
  "resources":
  - "endpointslices"
  "verbs":
  - "list"
  - "watch"
  - "get"
