tests/some-site/ingress/ingress_nginx/ingress-nginx-serviceaccount.yaml
"apiVersion": "v1"
"automountServiceAccountToken": true
"kind": "ServiceAccount"
"metadata":
  "labels":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.2.1"
  "name": "ingress-nginx"
  "namespace": "ingress-nginx"
