tests/some-site/ingress/ingress_nginx/nginx-ingressclass.yaml
"apiVersion": "networking.k8s.io/v1"
"kind": "IngressClass"
"metadata":
  "labels":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/part-of": "ingress-nginx"
    "app.kubernetes.io/version": "1.2.1"
  "name": "nginx"
"spec":
  "controller": "k8s.io/ingress-nginx"
